force-app/main/default/objects/IssueHearing2__c/IssueHearing2__c.object-meta.xml
<CustomObject>
    <label>課題ヒアリング（見積作成/発注形態）</label>
    <nameField>
        <displayFormat>Issue2-{0000}</displayFormat>
        <label>課題ヒアリング（見積作成/発注形態）名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>