force-app/main/default/objects/IssueHearing2__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>課題ヒアリング（見積作成/発注形態）</relationshipLabel>
    <relationshipName>Issue2Account</relationshipName>
    <type>Lookup</type>
</CustomField>