force-app/main/default/objects/IssueHearing2__c/fields/construction__c.field-meta.xml
<CustomField>
    <fullName>construction__c</fullName>
    <label>工事</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>基礎工事</fullName>
            </value>
            <value>
                <fullName>建方工事</fullName>
            </value>
            <value>
                <fullName>大工工事</fullName>
            </value>
            <value>
                <fullName>外装工事</fullName>
            </value>
            <value>
                <fullName>屋根工事</fullName>
            </value>
            <value>
                <fullName>樋工事</fullName>
            </value>
            <value>
                <fullName>水道設備工事</fullName>
            </value>
            <value>
                <fullName>電気工事</fullName>
            </value>
            <value>
                <fullName>内装工事</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>荷揚</fullName>
            </value>
            <value>
                <fullName>外構工事</fullName>
            </value>
            <value>
                <fullName>サッシ工事</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>