force-app/main/default/objects/IssueHearing2__c/fields/IsShareTotalValid__c.field-meta.xml
<CustomField>
    <fullName>IsShareTotalValid__c</fullName>
    <formula>ABS(
  BLANKVALUE(PrincipalSuppliersShare1__c, 0) +
  BLANKVALUE(PrincipalSuppliersShare2__c, 0) +
  BLANKVALUE(PrincipalSuppliersShare3__c, 0) - 1
) &lt; 0.01</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>/シェア率判定</label>
    <type>Checkbox</type>
</CustomField>