force-app/main/default/objects/IssueHearing2__c/fields/JU_ShareReason3_2__c.field-meta.xml
<CustomField>
    <fullName>JU_ShareReason3_2__c</fullName>
    <label>シェア理由③選択リスト2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>コスト（価格：原則は具体要因を優先）</fullName>
            </value>
            <value>
                <fullName>本社・グループ指定（本社方針で変更不可）</fullName>
            </value>
            <value>
                <fullName>物流サービス（小配送／運賃込み／荷揚げ込み／納期・現場対応）</fullName>
            </value>
            <value>
                <fullName>品質・安心感（施工品質＋対応力＋供給の安定＋保証）</fullName>
            </value>
            <value>
                <fullName>材工一式・施工込み（材工対応／材工分離不可）</fullName>
            </value>
            <value>
                <fullName>発注・窓口集約（まとめ発注／窓口一本化／請求・手配統合）</fullName>
            </value>
            <value>
                <fullName>長年の取引（慣行：原則は具体要因を優先）</fullName>
            </value>
            <value>
                <fullName>省施工・加工（プレカット／加工／ユニット化）</fullName>
            </value>
            <value>
                <fullName>一式納材（同梱／一括納材／資材一式を同一先で納めたい）</fullName>
            </value>
            <value>
                <fullName>メーカー／仕入先主導の商流決定（紹介・指定／交渉後に商流が決まる）</fullName>
            </value>
            <value>
                <fullName>人間関係・地域（地元応援など）</fullName>
            </value>
            <value>
                <fullName>積算・見積支援（拾い／数量／VE・代替提案）</fullName>
            </value>
            <value>
                <fullName>その他（例外・複合：原則使用しない）</fullName>
            </value>
            <value>
                <fullName>システム起因（発注・請求システム固定／EDI等の連携要件）</fullName>
            </value>
            <value>
                <fullName>取引条件（与信／支払条件）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>