force-app/main/default/objects/IssueHearing2__c/fields/main_vendor2__c.field-meta.xml
<CustomField>
    <fullName>main_vendor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>主要仕入先②</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>課題ヒアリング（見積作成/発注形態）</relationshipLabel>
    <relationshipName>Issue2Account_3j3_vi8</relationshipName>
    <type>Lookup</type>
</CustomField>