force-app/main/default/objects/IssueHearing2__c/fields/main_vendor3__c.field-meta.xml
<CustomField>
    <fullName>main_vendor3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>主要仕入先③</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>課題ヒアリング（見積作成/発注形態）</relationshipLabel>
    <relationshipName>Issue2Account_3r2</relationshipName>
    <type>Lookup</type>
</CustomField>