force-app/main/default/objects/IssueHearing2__c/fields/maker1__c.field-meta.xml
<CustomField>
    <fullName>maker1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカー①</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>課題ヒアリング（見積作成/発注形態）</relationshipLabel>
    <relationshipName>Issue2Account_3r2_8xw</relationshipName>
    <type>Lookup</type>
</CustomField>