force-app/main/default/objects/IssueHearing2__c/fields/maker2__c.field-meta.xml
<CustomField>
    <fullName>maker2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカー②</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>課題ヒアリング（見積作成/発注形態）</relationshipLabel>
    <relationshipName>Issue2Account_3j3_vi8_ddl</relationshipName>
    <type>Lookup</type>
</CustomField>