force-app/main/default/objects/IssueHearing2__c/fields/maker3__c.field-meta.xml
<CustomField>
    <fullName>maker3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカー③</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>課題ヒアリング（見積作成/発注形態）</relationshipLabel>
    <relationshipName>Issue2Account_3j3_34k</relationshipName>
    <type>Lookup</type>
</CustomField>