force-app/main/default/objects/IssueHearing2__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>主要仕入先/メーカー②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>