force-app/main/default/objects/IssueHearing2__c/fields/materialAmount__c.field-meta.xml
<CustomField>
    <fullName>materialAmount__c</fullName>
    <label>廃材金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>