force-app/main/default/objects/IssueHearing2__c/fields/MaterialDelivery__c.field-meta.xml
<CustomField>
    <fullName>MaterialDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>材料納品</label>
    <type>Checkbox</type>
</CustomField>