force-app/main/default/objects/IssueHearing2__c/fields/materials__c.field-meta.xml
<CustomField>
    <fullName>materials__c</fullName>
    <label>資材</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>鉄筋</fullName>
            </value>
            <value>
                <fullName>生コン</fullName>
            </value>
            <value>
                <fullName>ホールダウン・アンカーボルト</fullName>
            </value>
            <value>
                <fullName>躯体プレカット</fullName>
            </value>
            <value>
                <fullName>床下断熱材</fullName>
            </value>
            <value>
                <fullName>耐力面材</fullName>
            </value>
            <value>
                <fullName>羽柄材</fullName>
            </value>
            <value>
                <fullName>断熱材（壁・天井）</fullName>
            </value>
            <value>
                <fullName>石膏ボード</fullName>
            </value>
            <value>
                <fullName>野縁　木野縁（PC業者）</fullName>
            </value>
            <value>
                <fullName>フローリング</fullName>
            </value>
            <value>
                <fullName>内装建具</fullName>
            </value>
            <value>
                <fullName>階段</fullName>
            </value>
            <value>
                <fullName>養生材</fullName>
            </value>
            <value>
                <fullName>外壁</fullName>
            </value>
            <value>
                <fullName>屋根</fullName>
            </value>
            <value>
                <fullName>雨どい</fullName>
            </value>
            <value>
                <fullName>給水給湯管</fullName>
            </value>
            <value>
                <fullName>排水管</fullName>
            </value>
            <value>
                <fullName>キッチン</fullName>
            </value>
            <value>
                <fullName>ユニットバス</fullName>
            </value>
            <value>
                <fullName>トイレ</fullName>
            </value>
            <value>
                <fullName>洗面化粧台</fullName>
            </value>
            <value>
                <fullName>電気配線・スイッチ</fullName>
            </value>
            <value>
                <fullName>分電盤</fullName>
            </value>
            <value>
                <fullName>火災警報器</fullName>
            </value>
            <value>
                <fullName>照明</fullName>
            </value>
            <value>
                <fullName>換気設備</fullName>
            </value>
            <value>
                <fullName>クロス・CF</fullName>
            </value>
            <value>
                <fullName>和室部材</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>