force-app/main/default/objects/IssueHearing2__c/fields/PrincipalSuppliers3__c.field-meta.xml
<CustomField>
    <fullName>PrincipalSuppliers3__c</fullName>
    <label>主要仕入先/メーカー③</label>
    <length>255</length>
    <type>Text</type>
</CustomField>