force-app/main/default/objects/IssueHearing2__c/fields/PrincipalSuppliers__c.field-meta.xml
<CustomField>
    <fullName>PrincipalSuppliers__c</fullName>
    <label>主要仕入先/メーカー①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>