force-app/main/default/objects/IssueHearing2__c/fields/PrincipalSuppliersShare1__c.field-meta.xml
<CustomField>
    <fullName>PrincipalSuppliersShare1__c</fullName>
    <label>シェア①（%）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>