force-app/main/default/objects/IssueHearing2__c/fields/PrincipalSuppliersShare2__c.field-meta.xml
<CustomField>
    <fullName>PrincipalSuppliersShare2__c</fullName>
    <label>シェア②（%）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>