force-app/main/default/objects/IssueHearing2__c/fields/PrincipalSuppliersShareReason1__c.field-meta.xml
<CustomField>
    <fullName>PrincipalSuppliersShareReason1__c</fullName>
    <label>シェア理由①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>