force-app/main/default/objects/IssueHearing2__c/fields/PrincipalSuppliersShareReason2__c.field-meta.xml
<CustomField>
    <fullName>PrincipalSuppliersShareReason2__c</fullName>
    <label>シェア理由②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>