force-app/main/default/objects/IssueHearing2__c/fields/PrincipalSuppliersShareReason3__c.field-meta.xml
<CustomField>
    <fullName>PrincipalSuppliersShareReason3__c</fullName>
    <label>シェア理由③</label>
    <length>255</length>
    <type>Text</type>
</CustomField>