force-app/main/default/objects/IssueHearing2__c/fields/quantityEstimator__c.field-meta.xml
<CustomField>
    <fullName>quantityEstimator__c</fullName>
    <label>数量積算者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社</fullName>
            </value>
            <value>
                <fullName>仕入先</fullName>
            </value>
            <value>
                <fullName>自社・仕入先</fullName>
            </value>
            <value>
                <fullName>施工業者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>