force-app/main/default/objects/IssueHearing2__c/fields/ShareConfirmation__c.field-meta.xml
<CustomField>
    <fullName>ShareConfirmation__c</fullName>
    <label>シェア確認完了日</label>
    <type>Date</type>
</CustomField>