force-app/main/default/objects/IssueHearing2__c/fields/surplusMaterials__c.field-meta.xml
<CustomField>
    <fullName>surplusMaterials__c</fullName>
    <label>余材対応</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>施工業者引取</fullName>
            </value>
            <value>
                <fullName>納材業者引取</fullName>
            </value>
            <value>
                <fullName>現場廃棄</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>