force-app/main/default/objects/IssueHearing2__c/fields/wasteMaterial__c.field-meta.xml
<CustomField>
    <fullName>wasteMaterial__c</fullName>
    <label>廃材量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>